[package]
name = "gz-examples"
version = "0.1.0"
publish = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
gz.workspace = true
gz-msgs = { workspace = true, no-default-features = true }

[features]
fortress = ["gz-msgs/fortress"]
garden = ["gz-msgs/garden"]
harmonic = ["gz-msgs/harmonic"]
