[package]
name = "gz-examples"
version = "0.1.0"
publish = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
gz.workspace = true

[features]
fortress = ["gz/fortress"]
garden = ["gz/garden"]
harmonic = ["gz/harmonic"]
ionic = ["gz/ionic"]

[package.metadata.release]
release = false
