[package]
name = "gz-msgs-derive"
version = "0.1.0"
authors = ["Yume Hiramatsu <yuma.hiramatsu@gmail.com>"]
edition = "2021"
rust-version = "1.60.0"
description = "Internally used derive macro for gz-msgs"
readme = "README.md"
repository = "https://github.com/eduidl/gz-rs"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = "2"
