[package]
name = "gz-msgs"
version = "0.2.1"
authors = ["Yume Hiramatsu <yuma.hiramatsu@gmail.com>"]
edition = "2021"
rust-version = "1.60.0"
description = "Rust implmentation of Gazebo Messages"
readme = "README.md"
repository = "https://github.com/eduidl/gz-rs"
license = "Apache-2.0"
keywords = ["gazebo", "robotics", "simulation", "messages"]
categories = ["data-strctures"]
exclude = ["generate.sh"]

[dependencies]
protobuf = "3"

[build-dependencies]
protobuf-codegen = "3"
