[package]
name = "gz-msgs-build"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "An internal build crate for gz-msgs"
readme = "README.md"

[dependencies]
protobuf.workspace = true
protobuf-codegen.workspace = true
