[package]
name = "gz-msgs-common"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Interrnal crate for gz-msgs"

[dependencies]
protobuf.workspace = true
gz-msgs-derive.workspace = true
