[package]
name = "gz-msgs-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "An internal crate for gz-msgs and gz-transport"
readme = "README.md"

[dependencies]
protobuf.workspace = true
gz-msgs-derive.workspace = true
