[package]
name = "gz-msgs-derive"
version = "0.4.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Internally used derive macro for gz-msgs"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
syn = "2.0.38"
