[package]
name = "gz-msgs"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Rust implementation of Gazebo messages"
readme = "README.md"
keywords = ["gazebo", "robotics", "simulation", "messages"]

[dependencies]
protobuf.workspace = true
gz-msgs-common.workspace = true

[build-dependencies]
gz-msgs-build = { workspace = true, optional = true }
pkg-config.workspace = true

[features]
fortress = []
garden = []
harmonic = []

# for develop
generate = ["gz-msgs-build"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
