[package]
name = "gz-transport-sys"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "A low-level Rust wrapper for the Gazebo Transport"
readme = "README.md"
keywords = ["gazebo", "robotics", "simulation"]
categories = ["external-ffi-bindings"]
links = "gz-transport12"
exclude = [".clang-format"]

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
