[package]
name = "gz-transport-sys"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "A low-level Rust wrapper for the Gazebo Transport"
readme = "README.md"
keywords = ["gazebo", "robotics", "simulation"]
categories = ["external-ffi-bindings"]
exclude = [".clang-format"]

[build-dependencies]
cc = "1.0.83"
pkg-config.workspace = true

[features]
fortress = []
garden = []
harmonic = []
