[package]
name = "gz-transport"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Rust wrapper for Gazebo Transport"
readme = "README.md"

[dependencies]
crossbeam-channel = "0.5.8"
gz-transport-sys.workspace = true
gz-msgs-common.workspace = true
log = "0.4.20"

[dev-dependencies]
uuid = { version = "1.5.0", features = ["v4"] }
gz-msgs.workspace = true

[features]
fortress = ["gz-transport-sys/fortress"]
garden = ["gz-transport-sys/garden"]
harmonic = ["gz-transport-sys/harmonic"]
ionic = ["gz-transport-sys/ionic"]
