[package]
name = "gz"
version = "0.5.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Gazebo client library"
readme = "README.md"
keywords = ["gazebo", "robotics", "simulation"]
include = ["src/**/*.rs"]

[dependencies]
crossbeam-channel = "0.5"
gz-msgs-common.workspace = true
gz-transport-sys.workspace = true
log = "0.4"

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
gz-msgs.workspace = true
