[package]
name = "gz"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Gazebo client library"
readme = "README.md"
keywords = ["gazebo", "robotics", "simulation"]

[dependencies]
gz-msgs.workspace = true
gz-transport.workspace = true

[features]
fortress = ["gz-msgs/fortress", "gz-transport/fortress"]
garden = ["gz-msgs/garden", "gz-transport/garden"]
harmonic = ["gz-msgs/harmonic", "gz-transport/harmonic"]
ionic = ["gz-msgs/ionic", "gz-transport/ionic"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
